# spexxy

./: .gitlab-ci.yml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi.yml  pytest.yml  python-package.yml
docs/: Makefile
docs/source/: conf.py  index.rst  inits.rst  masks.rst  quickstart.rst
spexxy/: application.py  object.py  version.py
spexxy/cli/: spexxy.py  spexxytools.py
spexxy/component/: __init__.py  component.py  grid.py  interpolator.py  spectrumcomponent.py  star.py  tellurics.py
spexxy/data/: __init__.py  filter.py  fitsspectrum.py  isochrone.py  losvd.py  lsf.py  resultsfits.py  spectrum.py  vega.sed  vsini.py
spexxy/grid/: __init__.py  ferre.py  files.py  fits.py  grid.py  phoenix.py  sub.py  synspec.py  values.py
spexxy/init/: __init__.py  fromcsv.py  frompath.py  fromvalues.py  fromvhelio.py  fromyaml.py  init.py
spexxy/interpolator/: __init__.py  interpolator.py  linear.py  spline.py  sub.py  tellurics.py  ulyss.py
spexxy/main/: __init__.py  base.py  baseparamsfit.py  brute.py  fromgrid.py  lincomb.py  main.py  multimain.py  paramsfit.py
spexxy/mask/: __init__.py  ends.py  frompath.py  mask.py  negative.py  ranges.py
spexxy/tools/: __init__.py  plot.py
spexxy/utils/: clip_sigma.py  continuum.py  exception.py  fits.py  interpolator.py  log.py
spexxy/weight/: __init__.py  fromgrid.py  fromgridnearest.py  fromsigma.py  fromsnr.py  ranges.py  weight.py
tests/: conftest.py
tests/component/: test_grid.py  test_star.py
tests/data/: conftest.py  test_filter.py  test_fitsspectrum.py  test_losvd.py  test_spectrum.py  (+1 more)
(+65 files in other folders)
