[tool.poetry]
name = "spexxy"
version = "2.7.2"
description = "spectrum fitting package"
authors = ["Tim-Oliver Husser <thusser@uni-goettingen.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
scipy = "^1.11.2"
numpy = "^1.25.2"
astropy = "^5.3.2"
pandas = "^2.1.0"
lmfit = "^1.2.2"
pyyaml = "^6.0.1"
matplotlib = "^3.7.2"
h5py = "^3.9.0"
pyqt5 = "^5.15.9"
single-source = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = ">21.0"

[tool.poetry.scripts]
spexxy = 'spexxy.cli.spexxy:main'
spexxytools = 'spexxy.cli.spexxytools:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39', 'py311']
