[tool.poetry]
name = "spexxy"
version = "2.9.1"
description = "spectrum fitting package"
authors = ["Tim-Oliver Husser <thusser@uni-goettingen.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.4"
astropy = "^6.0"
pandas = "^2.2.2"
lmfit = "^1.3.1"
pyyaml = "^6.0.1"
matplotlib = "^3.9.1"
h5py = "^3.11.0"
pyqt5 = "^5.15.10"
single-source = "^0.4.0"
scipy = "^1.13"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
spexxy = 'spexxy.cli.spexxy:main'
spexxytools = 'spexxy.cli.spexxytools:main'

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39', 'py311', 'py312']
